--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^3.5.13",
     "vue-router": "^4.5.1",
     "vue-toastification": "^2.0.0-rc.5",
-    "yup": "^1.6.1"
+    "yup": "^1.6.1",
+    "z": "^1.0.9"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
